added by vikram

--- a/Vijay.html
+++ b/Vijay.html
@@ -13,3 +13,7 @@
 <hr>
 <!-- comment by surya-->
  <center><h1>PROUD TO BE THIS FRIEND</h1></center>
+
+ <!-- by vikram-->
+<p>VIJAY PHONE NO:</p>
+<h3>124588965</h3>
